Added Metatags for the site

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <!-- Facebook Metatags -->
+    <meta property="og:title" content="HackTrain - Hacking on Rails" />
+    <meta property="og:type" content="event" />
+    <meta property="og:url" content="http://hacktrain.com/" />
+    <meta property="og:image" content="http://hacktrain.com/img/journey-trainhack.jpg" />
+    <meta property="og:description" content="HackTrain is the first ever train hackathon in Europe! Apply for the craziest hackathon ever departing 27th March." />
+    <!-- Twitter Metatags -->
+    <meta name="twitter:card" content="HackTrain">
+    <meta name="twitter:site" content="@TheHackTrain">
+    <meta name="twitter:title" content="HackTrain - Hacking on Rails">
+    <meta name="twitter:description" content="HackTrain is the first ever train hackathon in Europe! Apply for the craziest hackathon ever departing 27th March.">
+    <meta name="twitter:image" content="http://hacktrain.com/img/journey-trainhack.jpg">   
+
     <title>Trainhacks - Hacking on Rails</title>
 
     <!-- Bootstrap Core CSS -->
@@ -280,7 +293,7 @@
                 </div>
                 <div class="organizer col-md-3 col-sm-4">
                     <a href="https://www.linkedin.com/profile/view?id=200767245"><img src="img/kosta.jpg" alt="Kosta Kolev"/></a>
-                    <h2 itemprop="name">Kosta Kolev</h2>
+                    <h2 itemprop="name">Kostadin Kolev</h2>
                     <ul itemprop="description" class="organizer-description">
                         <li>Organized a multinational hackathon.</li>
                         <li>Managed multiple international events.</li>
