Addition of Organisational Sponsors

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+h<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -171,13 +171,8 @@
     <section id="partners" class="container-wide content-section text-center">
         <div class="row">
             <div class="col-lg-12">
-                <h2>PARTNERS</h2>
+                <h2> TRANSPORT PARTNERS</h2>
                 <div class="container col-sm-12">
-                    <div class="col-sm-4 img-container">
-                        <a href="http://www.york.gov.uk/">
-                            <img class="img-responsive" src="img/logo-york.png"/>
-                        </a>
-                    </div>
                     <div class="col-sm-4 img-container">
                         <a href="http://www.eastmidlandstrains.co.uk/">
                             <img class="img-responsive" src="img/logo-emt.png"/>
@@ -186,16 +181,6 @@
                     <div class="col-sm-4 img-container">
                         <a href="http://www.eastcoast.co.uk/">
                             <img class="img-responsive" src="img/logo-ec.png"/>
-                        </a>
-                    </div>
-                    <div class="col-sm-4 img-container">
-                        <a href="http://hackaglobal.com/">
-                            <img class="img-responsive" src="img/logo-hg.png"/>
-                        </a>
-                    </div>
-                    <div class="col-sm-4 img-container">
-                        <a href="http://www.dotforgeaccelerator.com/">
-                            <img class="img-responsive" src="img/logo-dotforge.png"/>
                         </a>
                     </div>
                     <div class="col-sm-4 img-container">
@@ -208,6 +193,40 @@
         </div>
     </section>
 
+    <section id="partners" class="container-wide content-section text-center organisational">
+        <div class="row">
+            <div class="col-lg-12">
+                <h2> ORGANISATIONAL PARTNERS</h2>
+                <div class="container col-sm-12">
+                    <div class="col-sm-4 img-container">
+                        <a href="http://www.york.gov.uk/">
+                            <img class="img-responsive" src="img/logo-york.png"/>
+                        </a>
+                    </div>
+                    <div class="col-sm-4 img-container">
+                        <a href="http://scy.co.uk/">
+                            <img class="img-responsive" style="width:50%; margin:0 auto" src="img/logo-scy.png"/>
+                        </a>
+                    </div>
+                    <div class="col-sm-4 img-container">
+                        <a href="https://comp-soc.com/compsoc/page/home">
+                            <img class="img-responsive" style="padding-top:40px" src="img/logo-compsoc.png"/>
+                        </a>
+                    </div>
+                    <div class="col-sm-6 img-container">
+                        <a href="http://www.dotforgeaccelerator.com/">
+                            <img class="img-responsive" style="margin: 0 auto; padding-top:30px; width:80%" src="img/logo-dotforge.png"/>
+                        </a>
+                    </div>
+                    <div class="col-sm-6 img-container">
+                        <a href="http://hackaglobal.com/">
+                            <img class="img-responsive" src="img/logo-hg.png"/>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- <section id="speakers" class="content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
