Removal of VTEC Transport Partners

--- a/index.html
+++ b/index.html
@@ -174,19 +174,19 @@ h<!DOCTYPE html>
                 <h2> TRANSPORT PARTNERS</h2>
                 <div class="container col-sm-12">
                     <div class="col-sm-4 img-container">
+                       <!--  <a href="http://www.eastcoast.co.uk/">
+                            <img class="img-responsive" src="img/logo-ec.png"/>
+                        </a> -->
+                    </div>
+                    <div class="col-sm-4 img-container">
                         <a href="http://www.eastmidlandstrains.co.uk/">
                             <img class="img-responsive" src="img/logo-emt.png"/>
                         </a>
                     </div>
                     <div class="col-sm-4 img-container">
-                        <a href="http://www.eastcoast.co.uk/">
-                            <img class="img-responsive" src="img/logo-ec.png"/>
-                        </a>
-                    </div>
-                    <div class="col-sm-4 img-container">
-                        <a href="http://www.virgintrains.co.uk/">
+                       <!--  <a href="http://www.virgintrains.co.uk/">
                             <img class="img-responsive" src="img/logo-virgin-trains.png"/>
-                        </a>
+                        </a> -->
                     </div>
                 </div>
             </div>
