Added product forge/removed compsoc@

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ h<!DOCTYPE html>
     <meta name="twitter:site" content="@TheHackTrain">
     <meta name="twitter:title" content="HackTrain - Hacking on Rails">
     <meta name="twitter:description" content="HackTrain is the first ever train hackathon in Europe! Apply for the craziest hackathon ever departing 27th March.">
-    <meta name="twitter:image" content="http://hacktrain.com/img/journey-trainhack.jpg">   
+    <meta name="twitter:image" content="http://hacktrain.com/img/journey-trainhack.jpg">
 
     <title>Trainhacks - Hacking on Rails</title>
 
@@ -63,7 +63,7 @@ h<!DOCTYPE html>
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <span><img src="img/hacktrain-icon-white.png" style="width: 80px; margin-top: -10px" /></span>  
+                    <span><img src="img/hacktrain-icon-white.png" style="width: 80px; margin-top: -10px" /></span>
                     <span class="light">HackTrain</span>
                 </a>
             </div>
@@ -92,7 +92,7 @@ h<!DOCTYPE html>
                     </li>-->
                     <li>
                         <a class="page-scroll" href="#team">Team</a>
-                    </li> 
+                    </li>
                     <li>
                         <a class="page-scroll" href="#journey">Journey</a>
                     </li>
@@ -134,11 +134,11 @@ h<!DOCTYPE html>
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>An Experience Like No Other.</h2>
                 <p>
-                    HackTrain is the first ever train hackathon in Europe! An unforgettable experience where 40 of the best developers from all around Europe will revolutionize the world! Jump on board the HackTrain for a once in a lifetime journey, travel to the top tech spaces in the UK, hang out with the market makers in the Startup ecosystem, and create startups that will revolutionize the world! 
+                    HackTrain is the first ever train hackathon in Europe! An unforgettable experience where 40 of the best developers from all around Europe will revolutionize the world! Jump on board the HackTrain for a once in a lifetime journey, travel to the top tech spaces in the UK, hang out with the market makers in the Startup ecosystem, and create startups that will revolutionize the world!
                 </p>
                 <p>
                     Thanks to our strong partnership with the largest train companies in the UK, including East Midland Trains and Virgin Trains East Coast, hackers will be turning pizza into software whilst on an executive First Class Journey!
-                </p> 
+                </p>
                 <p>
                     Startups, apps, prototypes will be created, and presented in front of CEOs, investors, serial entrepreneurs and evangelists - all with the objective of becoming the 2015 HackTrain champion! With TrainHackers from UK, Russia, Romania, France, Poland, Czech Republic together with many other European countries, this hackathon will certainly promise a unique experience!
                 </p>
@@ -146,7 +146,7 @@ h<!DOCTYPE html>
                     Crazy? Definitely! Impossible? Not even close! Many individuals rocked our past events, creating mind blowing and revolutionary concepts! Some of our past events include <a href="http://uk.startupbus.com/">Startup Bus UK 2014</a>, <a href="http://moscow.startupweekend.org/">Startup Weekend Moscow</a>, <a href="https://twitter.com/startuphacksco/">Startup Hacks</a>.
                 </p>
             </div>
-            
+
             <ul class="list-inline banner-social-buttons col-sm-12">
                 <li class="col-sm-6">
                     <a href="https://twitter.com/TheHackTrain" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">@ TheHackTrain</span></a>
@@ -209,8 +209,8 @@ h<!DOCTYPE html>
                         </a>
                     </div>
                     <div class="col-sm-4 img-container">
-                        <a href="https://comp-soc.com/compsoc/page/home">
-                            <img class="img-responsive" style="padding-top:40px" src="img/logo-compsoc.png"/>
+                        <a href="https://productforge.io">
+                            <img class="img-responsive" style="padding-top:40px" src="img/productforge.png"/>
                         </a>
                     </div>
                     <div class="col-sm-6 img-container">
@@ -699,4 +699,3 @@ h<!DOCTYPE html>
 </body>
 
 </html>
-
