--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-h<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -91,10 +91,13 @@ h<!DOCTYPE html>
                         <a class="page-scroll" href="#trainhackers">TrainHackers</a>
                     </li>-->
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
+                        <a class="page-scroll" href="#journey">Journey</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#journey">Journey</a>
+                        <a class="page-scroll" href="#meetup">Meetup</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#team">Team</a>
                     </li>
                     <li>
                         <a class="page-scroll btn btn-info" href="#apply">
@@ -159,41 +162,47 @@ h<!DOCTYPE html>
         </div>
     </section>
 
-    <!-- <section id="sponsors" class="content-section text-center">
+    <section id="sponsors" class="content-section text-center">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>SPONSORS</h2>
-                <h4><a href="mailito:river@dotforge.com">Become a sponsor</a></h4>
+            <div class="container col-lg-8 col-lg-offset-2">
+                <h2>Headline Sponsor</h2>
+                <div class="col-sm-12 img-container">
+                  <img style="margin: auto auto" class="img-responsive" src="img/bloomberg-logo.png"/>
+                </div>
             </div>
         </div>
-    </section> -->
-
-    <section id="partners" class="container-wide content-section text-center">
-        <div class="row">
-            <div class="col-lg-12">
-                <h2> TRANSPORT PARTNERS</h2>
-                <div class="container col-sm-12">
-                    <div class="col-sm-4 img-container">
-                       <!--  <a href="http://www.eastcoast.co.uk/">
-                            <img class="img-responsive" src="img/logo-ec.png"/>
-                        </a> -->
-                    </div>
-                    <div class="col-sm-4 img-container">
-                        <a href="http://www.eastmidlandstrains.co.uk/">
-                            <img class="img-responsive" src="img/logo-emt.png"/>
-                        </a>
-                    </div>
-                    <div class="col-sm-4 img-container">
-                       <!--  <a href="http://www.virgintrains.co.uk/">
-                            <img class="img-responsive" src="img/logo-virgin-trains.png"/>
-                        </a> -->
-                    </div>
+        <div style="padding-top:150px" class="container col-lg-8 col-lg-offset-2">
+            <h2>Transport Sponsors</h2>
+            <div class="container col-sm-12">
+                <div class="col-sm-4 img-container">
+                   <!--  <a href="http://www.eastcoast.co.uk/">
+                        <img class="img-responsive" src="img/logo-ec.png"/>
+                    </a> -->
+                </div>
+                <div class="col-sm-4 img-container">
+                    <a href="http://www.eastmidlandstrains.co.uk/">
+                        <img style="width: 100%" class="img-responsive" src="img/logo-emt.png"/>
+                    </a>
+                </div>
+                <div class="col-sm-4 img-container">
+                   <!--  <a href="http://www.virgintrains.co.uk/">
+                        <img class="img-responsive" src="img/logo-virgin-trains.png"/>
+                    </a> -->
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="partners" class="container-wide content-section text-center organisational">
+    <!-- <section id="partners" class="container-wide content-section text-center">
+        <div class="row">
+            <div class="col-lg-12">
+                <h2> TRANSPORT PARTNERS</h2>
+
+            </div>
+        </div>
+    </section> -->
+
+    <section style="margin-top: 200px" id="partners" class="container-wide content-section text-center organisational">
         <div class="row">
             <div class="col-lg-12">
                 <h2> ORGANISATIONAL PARTNERS</h2>
@@ -265,83 +274,6 @@ h<!DOCTYPE html>
             </div>
         </div>
     </section> -->
-
-    <section id="apply" class="container content-section text-center">
-        <div id="type-form-parent" class="row">
-            <h1>APPLY NOW!</h1>
-            <div class="col-md-12" style="background: white; border-radius: 30px; padding: 10px 10px 10px 10px; height: 700px">
-                <iframe id="typeform-full" width="100%" height="100%" frameborder="0" src="" style="display:none;"></iframe>
-            </div>
-        </div>
-    </section>
-
-    <section id="team" class="container-wide content-section text-center">
-        <div class="row">
-            <div class="col-sm-12">
-                <h2>MEET THE TEAM!</h2>
-                <div class="organizer col-md-3 col-sm-4">
-                    <a href="https://www.linkedin.com/in/rivertam"><img src="img/river.jpg" alt="River Tam"/></a>
-                    <h2 itemprop="name">River Tamoor Baig<br></h2>
-                    <ul itemprop="description" class="organizer-description">
-                        <li>Has won 9 out of 10 hackathons attended.</li>
-                        <li>Programme Manager at Dotforge Accelerator.</li>
-                        <li>Launched Europe's first invitation only hackathon and was Conductor of StartupBus UK 2014</li>
-                    </ul>
-
-                    <ul class="banner-social-buttons col-sm-12">
-                        <li class="col-sm-12">
-                            <a href="mailito:river@dotforge.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">river@dotforge.com</span></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="organizer col-md-3 col-sm-4">
-                    <a href="http://www.linkedin.com/pub/alejandro-saucedo/41/6b3/4b0"><img src="img/alejandro.jpg" alt="Alejandro Saucedo"/></a>
-                    <h2 itemprop="name">Alejandro Saucedo</h2>
-                    <ul itemprop="description" class="organizer-description">
-                        <li>Has organized 20+ hackathons around the world.</li>
-                        <li>Founder at HackaGlobal and Software Developer at Bloomberg LP.</li>
-                        <li>Had the opportunity to meet Cameron and to discuss entrepreneurial matters with the Duke of York.</li>
-                    </ul>
-
-                    <ul class="banner-social-buttons col-sm-12">
-                        <li class="col-sm-12">
-                            <a href="mailito:axsauze@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">axsauze@gmail.com</span></a>
-                        </li>
-                    </ul>
-                    </ul>
-                </div>
-                <div class="organizer col-md-3 col-sm-4">
-                    <a href="https://www.linkedin.com/profile/view?id=200767245"><img src="img/kosta.jpg" alt="Kosta Kolev"/></a>
-                    <h2 itemprop="name">Kostadin Kolev</h2>
-                    <ul itemprop="description" class="organizer-description">
-                        <li>Organized a multinational hackathon.</li>
-                        <li>Managed multiple international events.</li>
-                        <li>Analyst at Accenture.</li>
-                    </ul>
-
-                    <ul class="banner-social-buttons col-sm-12">
-                        <li class="col-sm-12">
-                            <a href="mailito:kikyou56k@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">kolev1993@gmail.com</span></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="organizer col-md-3 col-sm-4">
-                    <a href="https://www.facebook.com/sally.kuok?fref=ts"><img src="img/sally.jpg" alt="Sally Kuok"/></a>
-                    <h2 itemprop="name">Sally Kuok</h2>
-                    <ul itemprop="description" class="organizer-description">
-                        <li>Winner of the Startup Weekend Sheffield.</li>
-                        <li>AIESEC Leader.</li>
-                    </ul>
-
-                    <ul class="banner-social-buttons col-sm-12">
-                        <li class="col-sm-12">
-                            <a href="mailito:kikyou56k@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">kikyou56k@gmail.com</span></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section id="journey" class="container content-section text-center">
         <div class="row">
@@ -654,6 +586,98 @@ h<!DOCTYPE html>
         </div>
 
     </div>
+
+
+    <section id="meetup" class="container-wide content-section text-center">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <h2>HackTrain Meetup - 26th February</h2>
+                <div style="width:100%; text-align:left;" >
+                  <iframe src="http://www.eventbrite.com/tickets-external?eid=15633450070&ref=etckt&v=2" frameborder="0" height="256" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <section id="team" class="container-wide content-section text-center">
+        <div class="row">
+            <div class="col-sm-12">
+                <h2>Team</h2>
+                <div class="organizer col-md-3 col-sm-4">
+                    <a href="https://www.linkedin.com/in/rivertam"><img src="img/river.jpg" alt="River Tam"/></a>
+                    <h2 itemprop="name">River Tamoor Baig<br></h2>
+                    <ul itemprop="description" class="organizer-description">
+                        <li>Has won 9 out of 10 hackathons attended.</li>
+                        <li>Programme Manager at Dotforge Accelerator.</li>
+                        <li>Launched Europe's first invitation only hackathon and was Conductor of StartupBus UK 2014</li>
+                    </ul>
+
+                    <ul class="banner-social-buttons col-sm-12">
+                        <li class="col-sm-12">
+                            <a href="mailito:river@dotforge.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">river@dotforge.com</span></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="organizer col-md-3 col-sm-4">
+                    <a href="http://www.linkedin.com/pub/alejandro-saucedo/41/6b3/4b0"><img src="img/alejandro.jpg" alt="Alejandro Saucedo"/></a>
+                    <h2 itemprop="name">Alejandro Saucedo</h2>
+                    <ul itemprop="description" class="organizer-description">
+                        <li>Has organized 20+ hackathons around the world.</li>
+                        <li>Founder at HackaGlobal and Software Developer at Bloomberg LP.</li>
+                        <li>Had the opportunity to meet Cameron and to discuss entrepreneurial matters with the Duke of York.</li>
+                    </ul>
+
+                    <ul class="banner-social-buttons col-sm-12">
+                        <li class="col-sm-12">
+                            <a href="mailito:axsauze@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">axsauze@gmail.com</span></a>
+                        </li>
+                    </ul>
+                    </ul>
+                </div>
+                <div class="organizer col-md-3 col-sm-4">
+                    <a href="https://www.linkedin.com/profile/view?id=200767245"><img src="img/kosta.jpg" alt="Kosta Kolev"/></a>
+                    <h2 itemprop="name">Kostadin Kolev</h2>
+                    <ul itemprop="description" class="organizer-description">
+                        <li>Organized a multinational hackathon.</li>
+                        <li>Managed multiple international events.</li>
+                        <li>Analyst at Accenture.</li>
+                    </ul>
+
+                    <ul class="banner-social-buttons col-sm-12">
+                        <li class="col-sm-12">
+                            <a href="mailito:kikyou56k@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">kolev1993@gmail.com</span></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="organizer col-md-3 col-sm-4">
+                    <a href="https://www.facebook.com/sally.kuok?fref=ts"><img src="img/sally.jpg" alt="Sally Kuok"/></a>
+                    <h2 itemprop="name">Sally Kuok</h2>
+                    <ul itemprop="description" class="organizer-description">
+                        <li>Winner of the Startup Weekend Sheffield.</li>
+                        <li>AIESEC Leader.</li>
+                    </ul>
+
+                    <ul class="banner-social-buttons col-sm-12">
+                        <li class="col-sm-12">
+                            <a href="mailito:kikyou56k@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">kikyou56k@gmail.com</span></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="apply" class="container content-section text-center">
+        <div id="type-form-parent" class="row">
+            <h1>APPLY NOW!</h1>
+            <div class="col-md-12" style="background: white; border-radius: 30px; padding: 10px 10px 10px 10px; height: 700px">
+                <iframe id="typeform-full" width="100%" height="100%" frameborder="0" src="" style="display:none;"></iframe>
+            </div>
+        </div>
+    </section>
+
+    <br><br><br><br><br><br>
 
     <!-- <div id="map"></div> -->
 
