made images brighter, removed background in partners. Made logos bigger

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     </section>
 
     <section id="sponsors" class="content-section text-center">
-        <div class="row">
+        <div style="width: 90%; margin: auto auto;" class="row">
             <div class="container col-lg-8 col-lg-offset-2">
                 <h2>Headline Sponsor</h2>
                 <div class="col-sm-12 img-container">
@@ -171,23 +171,13 @@
                 </div>
             </div>
         </div>
-        <div style="padding-top:150px" class="container col-lg-8 col-lg-offset-2">
+        <div style="padding-top:200px; padding-bottom: 200px" class="container col-lg-8 col-lg-offset-2">
             <h2>Transport Sponsors</h2>
             <div class="container col-sm-12">
-                <div class="col-sm-4 img-container">
-                   <!--  <a href="http://www.eastcoast.co.uk/">
-                        <img class="img-responsive" src="img/logo-ec.png"/>
-                    </a> -->
-                </div>
-                <div class="col-sm-4 img-container">
-                    <a href="http://www.eastmidlandstrains.co.uk/">
-                        <img style="width: 100%" class="img-responsive" src="img/logo-emt.png"/>
+                <div class="col-sm-offset-2 col-sm-8 img-container">
+                    <a  style="width: 100%;" href="http://www.eastmidlandstrains.co.uk/">
+                        <img style="width: 100%;" src="img/logo-emt.png"/>
                     </a>
-                </div>
-                <div class="col-sm-4 img-container">
-                   <!--  <a href="http://www.virgintrains.co.uk/">
-                        <img class="img-responsive" src="img/logo-virgin-trains.png"/>
-                    </a> -->
                 </div>
             </div>
         </div>
