added images for new partners

--- a/index.html
+++ b/index.html
@@ -181,6 +181,24 @@
                 </div>
             </div>
         </div>
+
+        <div style="padding-top:200px; padding-bottom: 200px" class="container col-lg-8 col-lg-offset-2">
+            <h2>Partners</h2>
+            <div class="container col-sm-6">
+                <div class="col-sm-12 img-container">
+                    <a  style="width: 100%;" href="http://github.com/plans">
+                        <img style="width: 100%;" src="img/github-logo.png"/>
+                    </a>
+                </div>
+            </div>
+            <div class="container col-sm-6">
+                <div class="col-sm-12 img-container">
+                    <a  style="width: 100%;" href="http://www.meetup.com/UK-Hackathons-and-Jams/">
+                        <img style="width: 100%;" src="img/hackathonsandjams-logo.png"/>
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- <section id="partners" class="container-wide content-section text-center">
