rearranged the schedule

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 <h2 class="timeline-time"><span>27th March - The Launch +</span></h2>
                 <dl class="timeline-series">
                     <span class="tick tick-before"></span>
-                    <dt id="1-1" class="timeline-event"><a>10:00 - HackTrain Launch (London) +</a></dt>
+                    <dt id="1-1" class="timeline-event"><a>17:00 - HackTrain Launch Dinner +</a></dt>
                     <span class="tick tick-after"></span>
                     <dd class="timeline-event-content" id="1-1EX">
                         <div class="media">
@@ -311,7 +311,7 @@
                         </div>
 
                         <blockquote>
-                            <p>The journey will begin with a massive launch event in London - a morning event together with the top players from the London tech and startup ecosystem, great speakers and incredible surprises. Even if you will not participate in the HackTrain, this is an event you do not want to miss!</p>
+                            <p>The journey will begin with a massive launch event in London - Top players from the London tech and startup ecosystem, great speakers and incredible surprises. Even if you will not participate in the HackTrain, this is an event you do not want to miss!</p>
                         </blockquote>
 
                     <br class="clear">
@@ -320,13 +320,15 @@
 
                 <dl class="timeline-series">
                     <span class="tick tick-before"></span>
-                    <dt id="1-2" class="timeline-event"><a>13:30 - Pitches on the HackTrain +</a></dt>
+                    <dt id="1-2" class="timeline-event"><a>17:30 - HackTrain Kickoff +</a></dt>
                     <span class="tick tick-after"></span>
                     <dd class="timeline-event-content" id="1-2EX">
                         <div class="media">
                             <img class="journey-img" src="img/journey-trainpitch.jpg" />
                         </div>
-
+                        <blockquote>
+                            <p>The HackTrain hackathon will official kick-off! There will be a brief on the event, as well as great speakers!</p>
+                        </blockquote>
                         <blockquote>
                             <p>Hackers, designers and entrepreneurs will hop on the HackTrain and have an opportunity to pitch their epic ideas whilst on the road to Sheffield to one of the top coworking spaces in the UK. Team formation workshops will take place, and by the time we arrive to Sheffield, everyone will be ready to ROCK!</p>
                         </blockquote>
@@ -337,7 +339,39 @@
 
                 <dl class="timeline-series">
                     <span class="tick tick-before"></span>
-                    <dt id="1-3" class="timeline-event"><a>16:00 - Arrival at Sheffield +</a></dt>
+                    <dt id="1-2" class="timeline-event"><a>19:00 - Meet the media +</a></dt>
+                    <span class="tick tick-after"></span>
+                    <dd class="timeline-event-content" id="1-2EX">
+                        <div class="media">
+                            <img class="journey-img" src="img/journey-trainpitch.jpg" />
+                        </div>
+                        <blockquote>
+                            <p>There will be an opportunity for interviews, pictures and networking with the Hackers, designers and entrepreneurs before they hop on the HackTrain.</p>
+                        </blockquote>
+
+                    <br class="clear">
+                    </dd>
+                </dl>
+
+                <dl class="timeline-series">
+                    <span class="tick tick-before"></span>
+                    <dt id="1-2" class="timeline-event"><a>19:55 - All aboard the HackTrain! +</a></dt>
+                    <span class="tick tick-after"></span>
+                    <dd class="timeline-event-content" id="1-2EX">
+                        <div class="media">
+                            <img class="journey-img" src="img/journey-trainpitch.jpg" />
+                        </div>
+                        <blockquote>
+                            <p>The TrainHackers will hop on the train and will have an opportunity to pitch their epic ideas whilst on the road to Sheffield to one of the top coworking spaces in the UK. Team formation workshops will take place, and by the time we arrive to Sheffield, everyone will be ready to ROCK!</p>
+                        </blockquote>
+
+                    <br class="clear">
+                    </dd>
+                </dl>
+
+                <dl class="timeline-series">
+                    <span class="tick tick-before"></span>
+                    <dt id="1-3" class="timeline-event"><a>23:00 - Arrival at Sheffield +</a></dt>
                     <span class="tick tick-after"></span>
                     <dd class="timeline-event-content" id="1-3EX">
                         <div class="media">
@@ -354,24 +388,7 @@
 
                 <dl class="timeline-series">
                     <span class="tick tick-before"></span>
-                    <dt id="1-5" class="timeline-event"><a>18:00 - Dinner is Served +</a></dt>
-                    <span class="tick tick-after"></span>
-                    <dd class="timeline-event-content" id="1-5EX">
-                        <div class="media">
-                            <img class="journey-img" src="img/journey-pizza.jpg" />
-                        </div>
-
-                        <blockquote>
-                            <p>Dinner will be served at the coworking space in Sheffield. Healthy options will certainly be available, but, like always, pizza and drinks will be there!</p>
-                        </blockquote>
-
-                    <br class="clear">
-                    </dd>
-                </dl>
-
-                <dl class="timeline-series">
-                    <span class="tick tick-before"></span>
-                    <dt id="1-4" class="timeline-event"><a>19:00 - Hacking Begins +</a></dt>
+                    <dt id="1-4" class="timeline-event"><a>23:00+ - Hacking Begins +</a></dt>
                     <span class="tick tick-after"></span>
                     <dd class="timeline-event-content" id="1-4EX">
                         <div class="media">
@@ -388,7 +405,7 @@
 
                 <dl class="timeline-series">
                     <span class="tick tick-before"></span>
-                    <dt id="1-6" class="timeline-event"><a>18:00 - Midnight Surprise & Workshops +</a></dt>
+                    <dt id="1-6" class="timeline-event"><a>00:00 - Midnight Surprise & Workshops +</a></dt>
                     <span class="tick tick-after"></span>
                     <dd class="timeline-event-content" id="1-6EX">
                         <div class="media">
