fixed meetup link

--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
     </div>
 
 
-    <section id="meetup" class="container-wide content-section text-center">
+    <section id="meetup" class="container-wide content-section text-center" style="clear: both">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h2>HackTrain Meetup - 26th February</h2>
