--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </div>
         </div>
 
-        <div style="padding-top:200px; padding-bottom: 200px" class="container col-lg-8 col-lg-offset-2">
+        <div style="padding-top:200px; padding-bottom: 200px" class="container col-sm-6 col-sm-offset-3">
             <h2>Partners</h2>
             <div class="container col-sm-6">
                 <div class="col-sm-12 img-container">
@@ -210,7 +210,7 @@
         </div>
     </section> -->
 
-    <section style="margin-top: 200px" id="partners" class="container-wide content-section text-center organisational">
+    <section style="margin-top: 200px" id="partners" class="container-wide content-section text-center organisational container">
         <div class="row">
             <div class="col-lg-12">
                 <h2> ORGANISATIONAL PARTNERS</h2>
