Added link to website

--- a/index.html
+++ b/index.html
@@ -167,7 +167,9 @@
             <div class="container col-lg-8 col-lg-offset-2">
                 <h2>Headline Sponsor</h2>
                 <div class="col-sm-12 img-container">
-                  <img style="margin: auto auto" class="img-responsive" src="img/bloomberg-logo.png"/>
+                  <a href="http://bloomberg.com/RD">
+                    <img style="margin: auto auto" class="img-responsive" src="img/bloomberg-logo.png"/>
+                  </a>
                 </div>
             </div>
         </div>
