--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#partners">Partners</a>
+                        <a class="page-scroll" href="#sponsors">Partners</a>
                     </li>
                     <!-- <li>
                         <a class="page-scroll" href="#speakers">Speakers</a>
@@ -103,6 +103,11 @@
                         <a class="page-scroll btn btn-info" href="#apply">
                             Apply Now!
                         </a>
+                    </li>
+                    <li style="width: 150px; position: relative;">
+                      <a href="http://bloomberg.com/RD">
+                        <img style="margin: auto auto; width: 100%; position: absolute; margin-top: -10px" class="img-responsive" src="img/bloomberg-logo-powered.png"/>
+                      </a>
                     </li>
                 </ul>
             </div>
