Added typo correction on description

--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
                     <ul itemprop="description" class="organizer-description">
                         <li>Has organized 20+ hackathons around the world.</li>
                         <li>Founder at HackaGlobal and Software Developer at Bloomberg LP.</li>
-                        <li>Had the opportunity to meet Cameron and to discuss entrepreneurial matters with the Duke of York.</li>
+                        <li>Had the opportunity to discss entrepreneurial matters with PM David Cameron, and later on with the Duke of York.</li>
                     </ul>
 
                     <ul class="banner-social-buttons col-sm-12">
