--- a/index.html
+++ b/index.html
@@ -691,6 +691,72 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="organizer col-md-3 col-sm-4">
+                    <a href="https://www.https://www.linkedin.com/profile/view?id=75914299"><img src="img/ian.jpg" alt="Ian Graham"/></a>
+                    <h2 itemprop="name">Ian Graham<br></h2>
+                    <ul itemprop="description" class="organizer-description">
+                        <li>Has ran several hackathons ranging from youth engagement to library innovation.</li>
+                        <li>Head of Innovation at York City Council.</li>
+                        <li>Co-designed the city’s multi-award-winning “GeniUS!” open innovation platform leading a number of creative/hackathon style events.</li>
+                    </ul>
+
+                    <ul class="banner-social-buttons col-sm-12">
+                        <li class="col-sm-12">
+                            <a href="mailito:ian.graham@york.gov.uk" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">ian.graham@york.gov.uk</span></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="organizer col-md-3 col-sm-4">
+                    <a href="https://www.linkedin.com/profile/view?id=59612588"><img src="img/heather.jpg" alt="Heather Niven"/></a>
+                    <h2 itemprop="name">Heather Niven</h2>
+                    <ul itemprop="description" class="organizer-description">
+                        <li>Has ran various startup events across Yorkshire</li>
+                        <li>Innovation Lead at Science City York.</li>
+                        <li>Has helped organisations become more innovative through building capacity, infrastructure development and support for collaboration.
+</li>
+                    </ul>
+
+                    <ul class="banner-social-buttons col-sm-12">
+                        <li class="col-sm-12">
+                            <a href="mailito:heather.niven@scy.co.uk" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">heather.niven@scy.co.uk</span></a>
+                        </li>
+                    </ul>
+                    </ul>
+                </div>
+                <div class="organizer col-md-3 col-sm-4">
+                    <a href="https://www.linkedin.com/profile/view?id=54482694"><img src="img/charles.jpg" alt="Charles Storr"/></a>
+                    <h2 itemprop="name">Charles Storr</h2>
+                    <ul itemprop="description" class="organizer-description">
+                        <li>Organized a multinational hackathon.</li>
+                        <li>Enterprise Manager at York City Council.</li>
+                        <li>Seasoned professional working in local government providing strategic support to local businesses.</li>
+                    </ul>
+
+                    <ul class="banner-social-buttons col-sm-12">
+                        <li class="col-sm-12">
+                            <a href="mailito:charles.storr@york.gov.uk" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">charles.storr@york.gov.uk</span></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="organizer col-md-3 col-sm-4">
+                    <a href="https://www.linkedin.com/profile/view?id=31013825"><img src="img/allan.jpg" alt="Allan Lloyd"/></a>
+                    <h2 itemprop="name">Allan Lloyd</h2>
+                    <ul itemprop="description" class="organizer-description">
+                        <li>Former Startup Weekend Glasgow Organiser.</li>
+                        <li>Founder at Product Forge.</li>
+                        <li>Organised several hackathons with various themes including open data and sustainability.</li>
+                    </ul>
+
+                    <ul class="banner-social-buttons col-sm-12">
+                        <li class="col-sm-12">
+                            <a href="mailito:allan@productforge.io" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">allan@productforge.io</span></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section id="apply" class="container content-section text-center">
