--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="twitter:description" content="HackTrain is the first ever train hackathon in Europe! Apply for the craziest hackathon ever departing 27th March.">
     <meta name="twitter:image" content="http://hacktrain.com/img/journey-trainhack.jpg">
 
-    <title>Trainhacks - Hacking on Rails</title>
+    <title>HackTrain - Hacking on Rails</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
