logos added of sponsors and partners

--- a/index.html
+++ b/index.html
@@ -175,8 +175,17 @@
                   <a href="http://bloomberg.com/RD">
                     <img style="margin: auto auto" class="img-responsive" src="img/bloomberg-logo.png"/>
                   </a>
+        <div style="padding-top:200px; padding-bottom: 200px" class="container col-lg-8 col-lg-offset-2">          
+                <h2>Core Sponsors</h2>
+            <div class="container col-sm-12">
+                <div class="col-sm-offset-2 col-sm-8 img-container">
+                    <a  style="width: 50%;" href="http://www.nationalrailmuseum.co.uk/">
+                        <img style="width: 50%;" src="img/nrmwhite.png"/>
+                    </a>
                 </div>
             </div>
+            </div>
+        </div>
         </div>
         <div style="padding-top:200px; padding-bottom: 200px" class="container col-lg-8 col-lg-offset-2">
             <h2>Transport Sponsors</h2>
@@ -186,6 +195,11 @@
                         <img style="width: 100%;" src="img/logo-emt.png"/>
                     </a>
                 </div>
+                <div class="col-sm-offset-2 col-sm-8 img-container">
+                    <a  style="width: 100%;" href="http://www.virgintrainseastcost.co.uk/">
+                        <img style="width: 70%;" src="img/logo-vtec.png"/>
+                    </a>
+                </div>
             </div>
         </div>
 
@@ -193,8 +207,8 @@
             <h2>Partners</h2>
             <div class="container col-sm-6">
                 <div class="col-sm-12 img-container">
-                    <a  style="width: 100%;" href="http://github.com/plans">
-                        <img style="width: 100%;" src="img/github-logo.png"/>
+                    <a  style="width: 80%;" href="http://github.com/plans">
+                        <img style="width: 80%;" src="img/github-logo.png"/>
                     </a>
                 </div>
             </div>
@@ -623,9 +637,9 @@
     <section id="meetup" class="container-wide content-section text-center" style="clear: both">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <h2>HackTrain Meetup - 26th February</h2>
+                <h2>Join Us For Our HackTrain Kick-Off Event In London - 27th March</h2>
                 <div style="width:100%; text-align:left;" >
-                  <iframe src="http://www.eventbrite.com/tickets-external?eid=15633450070&ref=etckt&v=2" frameborder="0" height="256" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
+                  <iframe src="http://eventbrite.co.uk/tickets-external?eid=15992358575&ref=etckt" frameborder="0" height="256" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
                 </div>
             </div>
         </div>
