--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 </div>
                 <div class="col-sm-offset-2 col-sm-8 img-container">
                     <a  style="width: 100%;" href="http://www.virgintrainseastcost.co.uk/">
-                        <img style="width: 70%;" src="img/logo-vtec.png"/>
+                        <img style="width: 70%;" src="img/logo-VTEC.png"/>
                     </a>
                 </div>
             </div>
