--- a/index.html
+++ b/index.html
@@ -214,6 +214,13 @@
             </div>
             <div class="container col-sm-6">
                 <div class="col-sm-12 img-container">
+                    <a  style="width: 40%;" href="http://bynifty.com/">
+                        <img style="width: 40%;" src="img/logo-nifty.png"/>
+                    </a>
+                </div>
+            </div>
+            <div class="container col-sm-6">
+                <div class="col-sm-12 img-container">
                     <a  style="width: 100%;" href="http://www.meetup.com/UK-Hackathons-and-Jams/">
                         <img style="width: 100%;" src="img/hackathonsandjams-logo.png"/>
                     </a>
@@ -324,7 +331,7 @@
                 <h2 class="timeline-time"><span>27th March - The Launch +</span></h2>
                 <dl class="timeline-series">
                     <span class="tick tick-before"></span>
-                    <dt id="1-1" class="timeline-event"><a>17:00 - HackTrain Launch Dinner +</a></dt>
+                    <dt id="1-1" class="timeline-event"><a>16:45 - Registration & Dinner+</a></dt>
                     <span class="tick tick-after"></span>
                     <dd class="timeline-event-content" id="1-1EX">
                         <div class="media">
@@ -341,17 +348,17 @@
 
                 <dl class="timeline-series">
                     <span class="tick tick-before"></span>
-                    <dt id="1-2" class="timeline-event"><a>17:30 - HackTrain Kickoff +</a></dt>
+                    <dt id="1-2" class="timeline-event"><a>17:20 - Event Starts +</a></dt>
                     <span class="tick tick-after"></span>
                     <dd class="timeline-event-content" id="1-2EX">
                         <div class="media">
                             <img class="journey-img" src="img/journey-trainpitch.jpg" />
                         </div>
                         <blockquote>
-                            <p>The HackTrain hackathon will official kick-off! There will be a brief on the event, as well as great speakers!</p>
+                            <p>The HackTrain hackathon will officially kick-off!</p>
                         </blockquote>
                         <blockquote>
-                            <p>Hackers, designers and entrepreneurs will hop on the HackTrain and have an opportunity to pitch their epic ideas whilst on the road to Sheffield to one of the top coworking spaces in the UK. Team formation workshops will take place, and by the time we arrive to Sheffield, everyone will be ready to ROCK!</p>
+                            <p>We'll have talks from some of our amazing sponsors, high-profile keynote speakers and a welcome speech by the organisers!</p>
                         </blockquote>
 
                     <br class="clear">
@@ -360,14 +367,14 @@
 
                 <dl class="timeline-series">
                     <span class="tick tick-before"></span>
-                    <dt id="1-2" class="timeline-event"><a>19:00 - Meet the media +</a></dt>
+                    <dt id="1-2" class="timeline-event"><a>17:40 - API Demos, Challenges, Keynote Speakers & Media Enagement +</a></dt>
                     <span class="tick tick-after"></span>
                     <dd class="timeline-event-content" id="1-2EX">
                         <div class="media">
                             <img class="journey-img" src="img/journey-trainpitch.jpg" />
                         </div>
                         <blockquote>
-                            <p>There will be an opportunity for interviews, pictures and networking with the Hackers, designers and entrepreneurs before they hop on the HackTrain.</p>
+                            <p>There will be an opportunity for interviews, pictures and networking with the Hackers, designers and entrepreneurs before they hop on the HackTrain. Challenges for the hackathon will also be set along with demos of APIs and data sets available</p>
                         </blockquote>
 
                     <br class="clear">
@@ -392,7 +399,7 @@
 
                 <dl class="timeline-series">
                     <span class="tick tick-before"></span>
-                    <dt id="1-3" class="timeline-event"><a>23:00 - Arrival at Sheffield +</a></dt>
+                    <dt id="1-3" class="timeline-event"><a>22:00 - Arrival at Sheffield +</a></dt>
                     <span class="tick tick-after"></span>
                     <dd class="timeline-event-content" id="1-3EX">
                         <div class="media">
@@ -409,7 +416,7 @@
 
                 <dl class="timeline-series">
                     <span class="tick tick-before"></span>
-                    <dt id="1-4" class="timeline-event"><a>23:00+ - Hacking Begins +</a></dt>
+                    <dt id="1-4" class="timeline-event"><a>23:00+ - Late night surprises +</a></dt>
                     <span class="tick tick-after"></span>
                     <dd class="timeline-event-content" id="1-4EX">
                         <div class="media">
@@ -417,7 +424,7 @@
                         </div>
 
                         <blockquote>
-                            <p>Once teams are set, hacking will begin! New gadgets and awesome tech will be released for hackers to play around. Experienced mentors will help the teams on anything that is required to ensure the best!</p>
+                            <p>OWe have loads of surprises planned for the whole journey at the train hackathon! You will not want to miss any of these!</p>
                         </blockquote>
 
                     <br class="clear">
@@ -426,7 +433,7 @@
 
                 <dl class="timeline-series">
                     <span class="tick tick-before"></span>
-                    <dt id="1-6" class="timeline-event"><a>00:00 - Midnight Surprise & Workshops +</a></dt>
+                    <dt id="1-6" class="timeline-event"><a>00:00 - Sleep Time at a hotel +</a></dt>
                     <span class="tick tick-after"></span>
                     <dd class="timeline-event-content" id="1-6EX">
                         <div class="media">
@@ -434,7 +441,7 @@
                         </div>
 
                         <blockquote>
-                            <p>We have loads of surprises planned for the whole journey at the train hackathon! You will not want to miss any of these!</p>
+                            <p>Chance to recuperate your energy in preparation for the 36 hours ahead!</p>
                         </blockquote>
 
                     <br class="clear">
@@ -467,7 +474,7 @@
 
                 <dl class="timeline-series">
                     <span class="tick tick-before"></span>
-                    <dt id="2-2" class="timeline-event"><a>15:00 - Tech Workshops +</a></dt>
+                    <dt id="2-2" class="timeline-event"><a>13:00 - Tech Workshops +</a></dt>
                     <span class="tick tick-after"></span>
                     <dd class="timeline-event-content" id="2-2EX">
                         <div class="media">
@@ -484,7 +491,7 @@
 
                 <dl class="timeline-series">
                     <span class="tick tick-before"></span>
-                    <dt id="2-2" class="timeline-event"><a>13:00 - Hacking at the Museum +</a></dt>
+                    <dt id="2-2" class="timeline-event"><a>15:00 - Hacking at the Museum +</a></dt>
                     <span class="tick tick-after"></span>
                     <dd class="timeline-event-content" id="2-2EX">
                         <div class="media">
@@ -501,7 +508,7 @@
 
                 <dl class="timeline-series">
                     <span class="tick tick-before"></span>
-                    <dt id="2-2" class="timeline-event"><a>20:00 - HackTrain to Edinburgh +</a></dt>
+                    <dt id="2-2" class="timeline-event"><a>17:35 - HackTrain to Edinburgh +</a></dt>
                     <span class="tick tick-after"></span>
                     <dd class="timeline-event-content" id="2-2EX">
                         <div class="media">
@@ -519,7 +526,7 @@
 
                 <dl class="timeline-series">
                     <span class="tick tick-before"></span>
-                    <dt id="2-2" class="timeline-event"><a>23:00 - All-nighter awesomeness! +</a></dt>
+                    <dt id="2-2" class="timeline-event"><a>20:15 - Arrive in Edinburgh! +</a></dt>
                     <span class="tick tick-after"></span>
                     <dd class="timeline-event-content" id="2-2EX">
                         <div class="media">
@@ -527,7 +534,7 @@
                         </div>
 
                         <blockquote>
-                            <p>More surprises will be available for the hackers to make it through the last night! It will be an amazing, exhausting and rewarding adventure!</p>
+                            <p>We will have food and drinks once we arrive at Edinburgh! Teams will be able to stay up all night working on their products! More surprises will be available for the hackers to make it through the last night! It will be an amazing, exhausting and rewarding adventure!</p>
                         </blockquote>
 
                     <br class="clear">
@@ -592,7 +599,7 @@
 
                 <dl class="timeline-series">
                     <span class="tick tick-before"></span>
-                    <dt id="3-2" class="timeline-event"><a>17:00 - Final Presentations!</a></dt>
+                    <dt id="3-2" class="timeline-event"><a>16:00 - Final Presentations!</a></dt>
                     <span class="tick tick-after"></span>
                     <dd class="timeline-event-content" id="3-2EX">
                         <div class="media">
@@ -609,7 +616,7 @@
 
                 <dl class="timeline-series">
                     <span class="tick tick-before"></span>
-                    <dt id="3-2" class="timeline-event"><a>17:00 - Announcements + Closing!</a></dt>
+                    <dt id="3-2" class="timeline-event"><a>17:30 - Judging and Announcements!</a></dt>
                     <span class="tick tick-after"></span>
                     <dd class="timeline-event-content" id="3-2EX">
                         <div class="media">
@@ -623,6 +630,23 @@
                     <br class="clear">
                     </dd>
                 </dl>
+                 <dl class="timeline-series">
+                    <span class="tick tick-before"></span>
+                    <dt id="3-2" class="timeline-event"><a>18:30 - HackTrain officially closes!</a></dt>
+                    <span class="tick tick-after"></span>
+                    <dd class="timeline-event-content" id="3-2EX">
+                        <div class="media">
+                            <img class="journey-img" src="img/journey-flights.jpg" />
+                        </div>
+
+                        <blockquote>
+                            <p>HackTrain 2015 wil come to a close!</p>
+                        </blockquote>
+
+                    <br class="clear">
+                    </dd>
+                </dl>
+
             </div>
 
             <button class="timeline-toggle">+ expand all</button>
