added prizes section

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                         <a class="page-scroll" href="#meetup">Meetup</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#prizes">Prizes</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#team">Team</a>
                     </li>
                     <li>
@@ -175,7 +178,7 @@
                   <a href="http://bloomberg.com/RD">
                     <img style="margin: auto auto" class="img-responsive" src="img/bloomberg-logo.png"/>
                   </a>
-        <div style="padding-top:200px; padding-bottom: 200px" class="container col-lg-8 col-lg-offset-2">          
+        <div style="padding-top:200px; padding-bottom: 200px" class="container col-lg-8 col-lg-offset-2">
                 <h2>Core Sponsors</h2>
             <div class="container col-sm-12">
                 <div class="col-sm-offset-2 col-sm-8 img-container">
@@ -668,6 +671,12 @@
             </div>
         </div>
     </div>
+
+    <section id="prizes" class="container content-section text-center">
+        <div id="type-form-parent" class="row">
+            <img width="100%" src="img/prizes.png" />
+        </div>
+    </section>
 
 
     <section id="team" class="container-wide content-section text-center">
